# inforce-test-task

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  docker-compose.yml
backend/core/: settings.py  urls.py
backend/src/api/: models.py  serializers.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_remove_employee_restaurant.py
